--- a/package.json
+++ b/package.json
@@ -16,34 +16,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.11",
     "autoprefixer": "^10.4.0",
-    "axios": "^0.24.0",
-    "bluebird": "^3.7.2",
-    "lodash": "^4.17.21",
-    "next": "12.1.6",
+    "next": "14.0.2",
     "postcss": "^8.3.11",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "tailwindcss": "^2.2.19"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-stripe-js": "^1.1.5",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.41",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.6.2",
-    "typescript": "4.7.3"
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "prettier": "^3.1.0",
+    "typescript": "5.2.2"
   }
 }
