--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Steplix",
   "license": "ISC",
   "scripts": {
-    "dev": "NODE_ENV=development next -p 65098",
+    "dev": "set NODE_ENV=development && next -p 65098",
     "build": "next build",
     "start": "NODE_ENV=production next start -p ${PORT}",
     "lint": "eslint --ext js,jsx,tsx .",
@@ -18,11 +18,12 @@
   "dependencies": {
     "@stripe/stripe-js": "^2.1.11",
     "autoprefixer": "^10.4.0",
-    "next": "14.0.2",
+    "next": "^14.0.2",
     "postcss": "^8.3.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-stripe-js": "^1.1.5",
+    "stripe": "^14.4.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
